--- a/example.env
+++ b/example.env
@@ -2,3 +2,6 @@ POSTGRES_DB=etl_pipeline
 POSTGRES_USER=airflow
 POSTGRES_PASSWORD=airflow
 POSTGRES_PORT=5432
+POSTGRES_CONTAINER_NAME=postgres_db
+
+AIRFLOW_PORT=8081
